add tribute info

--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@
 <body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-  <h1>Hello World</h1> <br>
-  <h2>“Hello World, we are software developers!”</h2>
-  <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+  <DOCTYPE! html>
+  <html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <main id="main">
+      <h1 id="title">Dr. Norman Borlaug</h1>
+      <div id="img-div">
+        <figure><img id="image"></figure>
+        <figcaption id="img-caption">This is a beach</figcaption>
+      </div>
+      <p id="tribute-info">
+        Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts.
+      </p>
+      <a id="tribute-link" href="https://example.com" target="_blank">visual mockups</a>
+    </main>
+  </body>
+  </html>
   <script src="js/index.js"></script>
 </body>
 
